  was fixed

  Closes #1470
  Closes #3499
  Closes #4302
  Closes #4798
  Closes #5081

* Fix a crash in ``unused-private-member`` checker when analyzing code using
  ``type(self)`` in bound methods.

  Closes #5569

* Fix false positive for ``undefined-variable`` when ``namedtuple`` class
  attributes are used as return annotations.

  Closes #5568

* Pyreverse - add output in mermaidjs format

* Emit ``used-before-assignment`` instead of ``undefined-variable`` when attempting
  to access unused type annotations.

  Closes #5713

* Added confidence level ``CONTROL_FLOW`` for warnings relying on assumptions
  about control flow.

* ``used-before-assignment`` now considers that assignments in a try block
  may not have occurred when the except or finally blocks are executed.

  Closes #85, #2615

* Fixed false negative for ``used-before-assignment`` when a conditional
  or context manager intervened before the try statement that suggested
  it might fail.

  Closes #4045

* Fixed false negative for ``used-before-assignment`` in finally blocks
  if an except handler did not define the assignment that might have failed
  in the try block.

* Fixed extremely long processing of long lines with comma's.

  Closes #5483

* Fixed crash on properties and inherited class methods when comparing them for
  equality against an empty dict.

  Closes #5646

* Fixed a false positive for ``assigning-non-slot`` when the slotted class
  defined ``__setattr__``.

  Closes #3793

* Fixed false positive for ``used-before-assignment`` with self-referential type
  annotation in conditional statements within class methods.

  Closes #5499

* Add checker ``redefined-slots-in-subclass``: Emitted when a slot is redefined in a subclass.

  Closes #5617

* Fixed false positive for ``global-variable-not-assigned`` when the ``del`` statement is used

  Closes #5333

* By default, pylint does no longer take files starting with ``.#`` into account. Those are
  considered `emacs file locks`. See