@@ -14,7 +14,7 @@ class MyClass:
         return self == other[0]
 
     def incorrect_default_method(
-        self, other=MyClass() # [used-before-assignment]
+        self, other=MyClass() # [undefined-variable]
     ) -> bool:
         return self == other
 
